--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body{
     background: #333;
     color: #fff;
     text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 a{
@@ -12,6 +13,6 @@ a:hover{
     color: #fff;
 }
 
-#About{
+a #about{
     transform: rotate(90deg);
 }
