--- a/style.css
+++ b/style.css
@@ -9,10 +9,55 @@ a{
     text-decoration: none;
 }
 
+/* .background-img{
+    background-image: url("img/headshot.jpg");
+    /* opacity: 50%; 
+    background-size: 400px;
+    position: absolute;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 100%;
+    height: 60%;
+    opacity: 0.5;
+    z-index: -1;
+
+} */
+
+.section-a{
+    background-image: url('img/headshot.jpg');
+    background-position: center;
+    background-size: cover;
+    height:100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    padding: 0, 20px;
+}
+
+#logo {
+    width: 200px;
+    height: 150px;
+    background: #000;
+    margin: 0 auto;
+}
+
 a:hover{
     color: #fff;
 }
 
 a #about{
     transform: rotate(90deg);
+}
+
+#arduino{
+    width: 500px;
+    height: 400px;
+}
+
+#raspberry{
+    width: 500px;
+    height: 400px;
 }
