--- a/style.css
+++ b/style.css
@@ -1,40 +1,65 @@
+@font-face{
+    font-family: 'Bebas Neue';
+    font-style: normal;
+    font-weight: normal;
+    src: local('Bebas Neue'), url('BebasNeue.woff') format('woff');
+}
 body{
-    background: #333;
+    /* background: #333; */
     color: #fff;
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
 }
 
-a{
-    text-decoration: none;
-}
-
-/* .background-img{
-    background-image: url("img/headshot.jpg");
-    /* opacity: 50%; 
-    background-size: 400px;
-    position: absolute;
-    background-position: center;
+header{
+    background-image: url('img/headshot2.png');
+    background-size: cover;
+    background-position: left;
     background-repeat: no-repeat;
-    background-size: cover;
-    width: 100%;
-    height: 60%;
-    opacity: 0.5;
-    z-index: -1;
-
-} */
-
-.section-a{
-    background-image: url('img/headshot.jpg');
-    background-position: center;
-    background-size: cover;
+    
     height:100vh;
-    display: flex;
+    /* display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     text-align: center;
-    padding: 0, 20px;
+    padding: 0, 20px;  */
+}
+
+#about-me{
+    background: #ffa500;
+}
+
+.back{
+    padding: 0;
+    margin: 0;
+    font-family: 'Bebas Neue';
+    font-size: 25em;
+    text-align: left;
+    opacity: 10%;
+}
+
+#progress{
+    background: #333;
+    /* display: flex;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    overflow: hidden;
+    width: 100%;
+    height: 100%; */
+}
+
+#contact{
+    background: #28e6f0;
+}
+
+footer{
+    background:#000;
+}
+
+a{
+    text-decoration: none;
 }
 
 #logo {
@@ -44,20 +69,12 @@ a{
     margin: 0 auto;
 }
 
-a:hover{
-    color: #fff;
-}
 
-a #about{
-    transform: rotate(90deg);
+.anim, .anim svg {
+    position: relative;
+    width: 100%;
+    height: 100%;
 }
-
-#arduino{
-    width: 500px;
-    height: 400px;
-}
-
-#raspberry{
-    width: 500px;
-    height: 400px;
+.anim path {
+    stroke-width: 2;
 }
