--- a/css/style.css
+++ b/css/style.css
@@ -39,6 +39,12 @@
  
 /* Basic */
 
+.st0{fill:#FABB5F;}
+.st1{fill:#808083;}
+.st2{fill:#28AAE1;}
+.st3{fill:#FAAB18;}
+.st4{fill:#33C5F3;}
+
 
 body {
     font-family: 'Bebas Neue';
@@ -75,6 +81,7 @@ header{
     background: #000;
     height: 100vh;
     color: #fff;
+    position: relative;
 
 }
 
@@ -82,8 +89,8 @@ header{
     position: absolute;
     top: 50%;
     left: 50%;
-    margin: 0;
-    padding: 0;
+    margin-right: -50%;
+    /* padding: 0; */
     transform: translate(-50%, -50%); 
     width: 30%;
     /*position: absolute;
