--- a/css/style.css
+++ b/css/style.css
@@ -39,20 +39,14 @@
  
 /* Basic */
 
-.st0{fill:#FABB5F;}
-.st1{fill:#808083;}
-.st2{fill:#28AAE1;}
-.st3{fill:#FAAB18;}
-.st4{fill:#33C5F3;}
-
 
 body {
     font-family: 'Bebas Neue';
     color: #000;
 }
-section, header, footer, main, article, nav, aside {
+/* section, header, footer, main, article, nav, aside {
     position: relative;
-}
+} */
 
 .wrapper{
     margin: -8px;
@@ -69,20 +63,40 @@ a {
 a:hover, a:focus {
     color: #0e1832;
 }
-p {
+/* p {
     color: #4A5666;
     font-size: 20px;
     line-height: 34px;
     margin: 0 0 30px;
     font-weight: 400;
-}
+} */
+
+/* Title Page */
 
 header{
     background: #000;
     height: 100vh;
     color: #fff;
-    position: relative;
+    /* position: relative; */
 
+}
+
+
+
+.title{
+    padding: 0;
+    margin: 2px;
+}
+
+#title-words{
+    position: relative;
+    text-align: center;
+    font-size: 50px;
+    top: 55vh;
+}
+
+#title-words h1{
+    font-size: 150px;
 }
 
 #logo{
@@ -103,6 +117,83 @@ header{
 header h1{
     margin-top: 0;
 }
+
+
+
+
+
+/* About Page */
+#about-me{
+    background-color: #FAAB18;
+    text-align: center;
+    margin: 0;
+    padding: 0;
+    
+}
+
+#about-me h1{
+    padding: 0;
+    margin: 0;
+}
+
+#am{
+    font-size: 100px;
+    display: inline;
+}
+
+#about-me #background-words{
+    /* position: absolute; */
+    color: rgba(247, 187, 59, .5);
+    text-align: left;
+    font-size: 554px;
+    line-height: 73%;
+    z-index: 0;
+    top:0;
+    margin: 0,0;
+    padding: 0;
+}
+.back{
+    top: 0px;
+    margin:0;
+    padding:0;
+}
+#about-me #background-words span{
+    display: flex;
+    letter-spacing: -0.04em;
+    z-index: -1;
+}
+
+
+#about{
+    position: relative;
+    bottom: 50vh;
+}
+
+
+
+/* Progress Section */
+#progress{
+    margin: 0;
+    width: 90%;
+    height: 100%;
+}
+
+.anim{
+    background-color: #111;
+    margin:0;
+    width: 100%;
+    height: 100%;
+
+}
+
+.projects{
+    position: relative;
+    color: #fff;
+    text-align: center;
+    
+}
+
+
 
 /* p {
     color: #4A5666;
