--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,60 @@
-/* Fonts */
+/* CSS Reset Cuz I guess that is something that has been recommended */
+/* ----------------------------------------------------------------- */
+
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+/* End of CSS Reset */
+/* ----------------------------------------------------- */
+
+
+/* Fonts That I am using */
+/* ----------------------------------------------------- */
 @font-face {
     font-family: 'Bebas Neue';
     src: url('../fonts/BebasNeue_Thin.otf');
@@ -35,18 +91,16 @@
     font-weight: 1000;
     font-style: normal;
 }
-
+/* End of Fonts */
+/* ----------------------------------------------------- */
  
-/* Basic */
 
-
+/* General Use CSS Stuff */
+/* ----------------------------------------------------------------- */
 body {
     font-family: 'Bebas Neue';
     color: #000;
 }
-/* section, header, footer, main, article, nav, aside {
-    position: relative;
-} */
 
 .wrapper{
     margin: -8px;
@@ -70,9 +124,12 @@ a:hover, a:focus {
     margin: 0 0 30px;
     font-weight: 400;
 } */
+/* End of General CSS */
+/* ----------------------------------------------------- */
+
 
 /* Title Page */
-
+/* ----------------------------------------------------- */
 header{
     background: #000;
     height: 100vh;
@@ -80,7 +137,6 @@ header{
     /* position: relative; */
 
 }
-
 
 
 .title{
@@ -117,17 +173,20 @@ header{
 header h1{
     margin-top: 0;
 }
-
+/* End of Title Page */
+/* ----------------------------------------------------- */
 
 
 
 
 /* About Page */
+/* ----------------------------------------------------- */
 #about-me{
     background-color: #FAAB18;
     text-align: center;
     margin: 0;
     padding: 0;
+    /* height: 100vh; */
     
 }
 
@@ -145,7 +204,8 @@ header h1{
     /* position: absolute; */
     color: rgba(247, 187, 59, .5);
     text-align: left;
-    font-size: 554px;
+    /* font-size: 554px; */
+    font-size: calc(70vw /3);
     line-height: 73%;
     z-index: 0;
     top:0;
@@ -157,6 +217,7 @@ header h1{
     margin:0;
     padding:0;
 }
+
 #about-me #background-words span{
     display: flex;
     letter-spacing: -0.04em;
@@ -168,30 +229,89 @@ header h1{
     position: relative;
     bottom: 50vh;
 }
+/* End of About page */
+/* ----------------------------------------------------- */
 
 
-
-/* Progress Section */
+/* Progress Page */
+/* ----------------------------------------------------- */
 #progress{
-    margin: 0;
-    width: 90%;
-    height: 100%;
+    background-color: #222;
+    top:0;
+    left:0;
+    width:100%;
+    height:90%;
 }
 
-.anim{
-    background-color: #111;
-    margin:0;
+.anim{ 
     width: 100%;
     height: 100%;
+    margin-top: 20px;
+    margin: 0 auto;
+    position: relative;
 
 }
 
 .projects{
     position: relative;
+    margin: 0 auto;
     color: #fff;
     text-align: center;
+    top: 100;
     
 }
+/* End of Progress Page */
+/* ----------------------------------------------------- */
+
+
+/* Contact Page */
+/* ----------------------------------------------------- */
+#contact{
+    background-color: #33C5F3;
+}
+
+#contact p{
+    font-size: 12vw;
+    text-align: center;
+    z-index: 100;
+}
+
+/* End of Contact Page */
+/* ----------------------------------------------------- */
+
+
+
+/* Footer */
+/* ----------------------------------------------------- */
+    footer{    
+        background-color: #000;
+        color: #fff;
+        text-align: center;
+        font-size: 3.5vw;
+    }
+
+/* End of Footer */
+/* ----------------------------------------------------- */
+
+
+
+/* Media Queries */
+/* ----------------------------------------------------- */
+/* @media only screen and (max-width: 700px) {
+    header{
+        height: auto;
+    }
+} */
+
+/* End of Media Queries */
+/* ----------------------------------------------------- */
+
+
+
+
+
+
+
 
 
 
