--- a/css/style.css
+++ b/css/style.css
@@ -64,33 +64,27 @@
 /* End of Fonts */
 /* ----------------------------------------------------- */
  
-
 /* General Use CSS Stuff */
 /* ----------------------------------------------------------------- */
 *{
     margin: 0;
-    padding: 0;
-    
+    padding: 0;  
 }
 
-html,body
+
+html
 {
     width: 100%;
-    height: 100%;
-    overflow-x: hidden; 
-    box-sizing: border-box;
+    overflow-x: hidden;
 }
-
-/* html{
-    display: table;
-    margin: auto;
-} */
 
 body {
     font-family: 'Bebas Neue';
     font-weight: 700;
+    max-width: 2000px;
+    margin: 0 auto;
     color: #000;
-    /* max-width: 2000px; */
+    overflow: hidden;
     background: #464646;
     /* display: table-cell;
     vertical-align: middle; */
@@ -112,39 +106,75 @@ a {
 
 /* Title Page */
 /* ----------------------------------------------------- */
+
+
+/* #heading{
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 50%;
+} */
+
 header{
     position: relative;
     background: #000;
+    width: 100%;
     height: 100vh;
     color: #fff;
 }
 
+
+header .title{
+    position: fixed;
+    width: 100%;
+    text-align: center;
+}
+
 header #logo{
-    position: absolute;
+    max-width: 50%;
     top: 50%;
     left: 50%;
     margin-right: -50%;
     transform: translate(-50%, -50%); 
-    width: 30%;
+    width: 55%;
 }
 
-header .title{
-    padding: 0;
-    margin: 2px;
-    text-align: center;
+header .hi{
+    text-align: left;
+    top: 40%;
+    left: 25%;
+    font-size: 15vw;
+    font-weight: 700;
+    word-spacing: 40px;
+    opacity: 0;
+    -webkit-animation: mymove .5s ease forwards; /* Safari 4.0 - 8.0 */
+    animation: mymove .5s ease forwards;
+    -webkit-animation-delay: 1s;
+    animation-delay: 1s;
+}
+
+/* header #line{
+    border: .5px solid #fff;
+    width: 1px;
+    height: 20px;
+    position: fixed;
+    bottom: 10vw;
+    left: 50%;
+} */
+
+header .welcome{
+    position: bottom;
+    bottom: 5vw;
+    margin: 0 auto;
     font-size: 3vw;
-
 }
 
-header .title h1{
-    font-size: 150px;
-    margin-top: 0;
+
+header .scroll{
+    bottom: 0;
+    font-size: 3.5vw;
 }
 
-header #title-words{
-    position: relative;
-    top: 55vh;
-}
 
 /* End of Title Page */
 /* ----------------------------------------------------- */
@@ -156,20 +186,19 @@ header #title-words{
 /* ----------------------------------------------------- */
 #about-me{
     background-color: #FAAB18;
-    margin: 0;
-    padding: 0;
-    position: relative;
     width: 100%;
-    height: 100%;
-    
+    height: auto;  
+    position: relative;
+    transition: height .5s ease-in;
 }
 
 #about-me h1{
-    padding: 0;
-    margin: 0;
+    width: 100%;
     color: #fff;
     font-size: 9vw;
     text-align: center;
+    position: absolute;
+    margin: 5px 0;
 }
 
 
@@ -196,61 +225,154 @@ header #title-words{
 
 
 #about-me .info{
+    font-size: 3vw;
     position: absolute;
-    top: 25%;
-    left: 25%;
-    width: 50%;
-    font-size: 1.5vw;
+    width: 85%;
+    top: 5vw;
+    padding: 3vw 40px;
+    text-align: left;
+    color: #fff;
 }
 
-#about-me .about{
-    text-align: center;
+.about{
+    margin: 50px 0;
 }
+
+/* #about-me .about{
+    text-align: center;
+} */
 
 
     /* Skills Section */
     /* ----------------------------------------------------- */
+
+
     #about-me #skills{
-        background: rgba(150, 149, 149, 0.3);
+        background: rgba(252, 194, 70, 0.95);
         width: 100%;
-        height: 50%;
-        bottom: 0;
-        left: 0;
+        height: 0;
         position: absolute;
+        bottom: 0;
+        z-index: 0;
+        transition: 1s ease-out;
     }
+
+
+    /* #about-me h1:hover{
+        transform: rotateZ(90deg);
+    } */
+    #btn{
+        display: none;
+    }
+
+    #skills > .label > .fa-angle-up{
+        position: relative;
+        left: 7vw;
+        bottom: 3vw;
+        /* transform: scaleX(1.25); */
+        transition: transform .5s ease-out, bottom .5s ease-out;
+        z-index: -1;
+        animation: up 2s 1s ease-in-out infinite;
+    }
+
+    #skills > .label{
+        cursor: pointer;
+        display: block;
+        position: relative; 
+        left: -2vw;
+        font-size: 5vw;
+        color: #fff;
+        width: 100%;
+        text-align: center;
+        bottom: 5vw;
+        margin-bottom: -5vw;
+        transition: height .5s ease-out, bottom .5s ease-out;
+        z-index: 1;
+    }
+
 
     .skill-list li{
         float: left;
         width: 40%;
-        margin: 5%;
+        height: 0%;
         list-style-type: none;
+        margin: 0 5%;
+        position: relative;
+        opacity: 0;
+        transition: .5s linear;
+    }
+
+    .skill-title{
+        position: relative;
+        font-size: 1.5rem;
+        bottom: 25px;
+        color: #3f3f3f;
+    }
+
+    .skill-percent{
+        position: relative;
+        font-size: 1.5rem;
+        bottom: 55px;
+        color: #3f3f3f;
+        float: right;  
+    }
+
+   #btn:checked ~ #skills{
+        height: 85%;
+    }
+
+    #btn:checked ~ #skills > .label{
+        bottom: 0;
+    }
+
+    #btn:checked ~ #skills > .label > .fa-angle-up{
+        -moz-transform: rotateZ(-180deg);
+        -o-transform: rotateZ(-180deg);
+        -webkit-transform: rotateZ(-180deg);
+        transform: rotateZ(-180deg);
+        animation: none;
+        bottom: -3.5vw;
+    }
+
+    #btn:checked ~ #skills > .skill-list > li{
+        opacity: 100;
     }
 
     .skill .container{
         height: 5px;
         width: 100%;
-        background-color: #8d8d8d;
-        margin: 50px 0;
+        background-color: #f3960a;
+        margin: 20% 0;
     }
 
     .container .skl{
-        height: 5px;
-        width: 65%;
-        -webkit-box-shadow:
-            inset 0 0 1px #fff,
-            0px 0px 1px 1px rgba(250, 173, 8, 0.3);
-        -moz-box-shadow:
-            inset 0 0 1px #fff,
-            0px 0px 1px 1px rgba(250, 173, 8, 0.3);
-        box-shadow:
-            inset 0 0 1px #fff,
-            0px 0px 1px 1px rgba(250, 173, 8, 0.3);
+        height: 7px;
+        background-color: #8d8d8d;
+        position: relative;
+        left: 0;
+        bottom: 1px;
+    }
+
+    .skill .top{
+        margin-top: 25%;
+    }
+
+    .skill .last{
+        margin-bottom: 40px;
+    }
+
+    #skill-info{
+        text-align: center;
+        position: relative;
+        font-size: 1.2rem;
+        bottom: 1;
+        color: #3f3f3f;
+        padding: 10px;
     }
 
 
     .container #java{
-        background-color: #f3960a;
-        width: 70%;
+        width: 75%;
     }
     .container #c{
         background-color: #11d6ec;
@@ -258,42 +380,37 @@ header #title-words{
         box-shadow: none;
     }
     .container #javascript{
-        background-color: #f3960a;
         width: 50%;
     }
     .container #perl{
         background-color: #11d6ec;
-        width: 30%;
+        width: 40%;
         box-shadow: none;
     }
     .container #html-css{
-        background-color: #f3960a;
-        width: 60%;
+        width: 65%;
+    }
+    .container #mysql{
+        width: 30%;
     }
     .container #photoshop{
-        background-color: #f3960a;
+        background-color: #11d6ec;
         width: 65%;
     }
     .container #illustrator{
-        background-color: #11d6ec;
-        width: 45%;
+        width: 50%;
         box-shadow: none;
-    }
-    .container #after-effects{
-        background-color: #f3960a;
-        width: 30%;
     }
     .container #nx{
         background-color: #11d6ec;
-        width: 45%;
+        width: 50%;
         box-shadow: none;
     }
     .container #blender{
-        background-color: #f3960a;
-        width: 45%;
+        width: 40%;
     }
     /* End of Skills Section */
-    /* ----------------------------------------------------- */
+/* ----------------------------------------------------- */
 
 
 /* End of About page */
@@ -306,6 +423,7 @@ header #title-words{
     background-color: #222;
     position: relative;
     width: 100%;
+    box-sizing: border-box;
 }
 
 #progress .title{
@@ -324,15 +442,62 @@ header #title-words{
 }
 #progress .prog{
     color: #fff;
-    font-size: 1.5vw;
+    font-size: 3vw;
     text-align: left;
+    padding: 0 40px;
 }
 
+#project-info{
+    margin-top: 80px;
+    font-size: 3vw;
+    text-align: center;
+}
 
-#progress .projects{
-    position: absolute;
-    top: 10%;
-    left: 30%;
+.project{
+    color:#fff;
+    padding: 0 40px;
+}
+
+#progress ul{
+    margin: 0 auto;
+    width: 45%;
+    margin-top: 15px;
+    columns: 2;
+    border: 2px #fff solid;
+}
+
+.project li{
+    list-style-type: none;
+    text-align: center;
+    font-size: 2.5vw;
+    line-height: 150%;
+}
+
+#project-footer{
+    padding-top: 10px;
+    color: #fff;
+    font-size: 2.5vw;
+    text-align: center;
+}
+
+/* #project3{
+    margin-top: 80px;
+} */
+
+
+
+#progress h2{
+    text-align: center;
+    color: #fff;
+    font-size: 2.75vw;
+    text-decoration: underline;
+    /* border-bottom: #fff solid 2px; */
+}
+
+#progress p{
+    color: #fff;
+    font-size: 1.3em;
+    line-height: 130%;
 }
 
 /* #progress .projects{
@@ -341,7 +506,7 @@ header #title-words{
     margin-bottom: -30vh;
 } */
 
-#progress .project{
+/* #progress .project{
     display: grid;
     padding: 5px;
     margin: 10px 0;
@@ -352,7 +517,7 @@ header #title-words{
     height: 5vw;
     text-align: center;  
     font-size: 1.5vw; 
-}
+} */
 
 
 /* End of Progress Page */
@@ -415,86 +580,286 @@ footer #linkedin:hover{
     color: #77c0f1;
 }
 
-footer p{
+/* footer p{
     display: inline;
     padding: 10px 0;
-}
+} */
 
 footer span{
-    padding: 0 .5%;
+    padding: 5px .5%;
 }
 
 footer .smile{
     padding: 0;
     margin: 0;
+    -webkit-transition: all 225ms ease;
+    -moz-transition: all 225ms ease;
+    transition: all 225ms ease;
+
+}
+
+footer img{
+    /* width: 5%;
+    position: relative;
+    top: 1px;
+    left: -40px; */
+    position: absolute;
+    width: 7%;
+    top: 50%;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%); 
+    z-index: 0;
 }
 
 footer .thanks{
+    position: relative;
+    z-index: 1;
     padding-right: 0;
     margin-right: 0;
 }
 
+span.thanks:hover ~ #eyes{
+    color: #77c0f1;
+} 
+
+span.thanks:hover ~ #mouth{
+    color: #e5ad31;
+} 
+
 /* End of Footer */
 /* ----------------------------------------------------- */
 
+@keyframes mymove {
+    from {opacity: 0;}
+    to {opacity: 100;}
+}
 
+@keyframes up {
+    0%  {bottom: 3vw;}
+    50%  {bottom: 3.5vw;}
+    100%  {bottom: 3vw;}
+}
 
 /* Media Queries */
 /* ----------------------------------------------------- */
-/* @media only screen and (max-width: 1000px) {
-    header{
-        height: 60vh;
-    }
-    #logo{
-        top: 100px;
-        left: 10px;
-        margin-right: 0px;
-        /* padding: 0; * /
-        transform: translate(0,0); 
-    }
 
-    #title-words{
-        position: relative;
-        text-align: center;
-        top: 100px;
-        left: 80px;
-    }
-
-    #title-words h1{
-        font-size: 8vw;
-    }
-} */
-
-@media only screen and (max-width: 700px) {
+@media only screen and (max-width: 767px) {
     header{
         height: 30vh;
+        position: relative;
     }
+    header .title{
+        position: absolute;
+    }
+
     #logo{
-        top: 100px;
-        left: 10px;
+        top: 0;
+        left: 0;
         margin-right: 0px;
-        /* padding: 0; */
         transform: translate(0,0); 
     }
 
-    #title-words{
-        position: relative;
-        text-align: center;
-        top: 100px;
-        left: 80px;
+
+    header .hi{
+        top: 40%;
+        left: 20%;
+        font-size: 15vw;
+        font-weight: 700;
+        word-spacing: 30px;
     }
 
-    #title-words h1{
-        font-size: 8vw;
+    header .welcome{
+        display: none;
+    }
+    
+    header .scroll{
+        display: none;
+    }
+
+    .skill-title{
+        position: relative;
+        font-size: 1rem;
+        bottom: 1rem;
+        color: #3f3f3f;
+    }
+
+    .skill-percent{
+        position: relative;
+        font-size: 1rem;
+        bottom: 35px;
+        color: #3f3f3f;
+        float: right;  
+        margin-left: 50px;
+    }
+
+    #skill-info{
+        text-align: center;
+        position: relative;
+        font-size: 1rem;
+        bottom: 1;
+        color: #3f3f3f;
+        padding: 10px;
+    }
+
+    #project-info{
+        margin-top: 15px;
+        font-size: 3vw;
+        text-align: center;
+    }
+
+    #progress ul{
+        padding: 0 20px;
+        margin: 0 auto;
+        width: 75%;
+        margin-top: 15px;
+        columns: 3;
+        border: 2px #fff solid;
+    }
+
+    .project li{
+        list-style-type: none;
+        text-align: center;
+        font-size: 2.75vw;
+        line-height: 150%;
+    }
+
+    #project-info{
+        margin-top: 20px;
+        font-size: 3vw;
+        text-align: center;
+    }
+
+    #project-footer{
+        padding-top: 10px;
+        color: #fff;
+        font-size: 3vw;
+        text-align: center;
     }
 }
 
-/* @media only screen and (max-width: 600px) {
-    #progress .project{
-        height: 40px;
+@media only screen and (max-width: 550px) {
+
+    .about{
+        margin: 30px 0;
+    }
+    #about-me .info{
+        font-size: 4vw;
+        position: absolute;
+        width: 85%;
+        top: 5vw;
+        margin-top: 0px;
+        padding: 2vw 30px;
+        text-align: left;
+        color: #fff;
     }
 
-} */
+    .about{
+        margin: 30px 0;
+    }
+    
+
+
+    #about-me #skills{
+        position: relative;
+        height: 50%;
+    }
+
+    .skill-list li{
+        opacity: 100;
+    }
+
+    #skills > .label{
+        bottom: 0;
+        transition: height 0s linear;
+        margin-bottom: 0;
+        font-size: 9vw;
+        left: 1%;
+    }
+
+    #skills > .label > .fa-angle-up{
+        display: none;
+    }
+
+    .skill-title{
+        position: relative;
+        font-size: .7rem;
+        bottom: 1rem;
+        color: #3f3f3f;
+    }
+
+    .skill-percent{
+        position: relative;
+        font-size: .7rem;
+        bottom: 29px;
+        color: #3f3f3f;
+        float: right;  
+        margin-left: 50px;
+    }
+
+    #skill-info{
+        text-align: center;
+        position: relative;
+        font-size: .85rem;
+        bottom: 1;
+        color: #3f3f3f;
+        padding: 10px;
+    }
+
+    #progress ul{
+        padding: 0 20px;
+        margin: 0 auto;
+        width: 75%;
+        margin-top: 15px;
+        columns: 4;
+        border: 2px #fff solid;
+    }
+
+    .project li{
+        list-style-type: none;
+        text-align: center;
+        font-size: 2.75vw;
+        line-height: 150%;
+    }
+
+    #project-info{
+        margin-top: 20px;
+        font-size: 3vw;
+        text-align: center;
+    }
+
+    #project-footer{
+        padding-top: 10px;
+        color: #fff;
+        font-size: 3vw;
+        text-align: center;
+    }
+
+    footer{ 
+        padding: 5px 0;
+        position: relative;   
+        background-color: #000;
+        color: #fff;
+        text-align: center;
+        font-size: 5vw;
+    
+    }
+
+    footer img{
+        /* width: 5%;
+        position: relative;
+        top: 1px;
+        left: -40px; */
+        position: absolute;
+        width: 10%;
+        top: 50%;
+        left: 50%;
+        margin-right: -50%;
+        transform: translate(-50%, -50%); 
+        z-index: 0;
+    }
+}
+
 
 /* End of Media Queries */
 /* ----------------------------------------------------- */
