--- a/css/style.css
+++ b/css/style.css
@@ -81,7 +81,7 @@ html
 body {
     font-family: 'Bebas Neue';
     font-weight: 700;
-    max-width: 2000px;
+    max-width: 3000px;
     margin: 0 auto;
     color: #000;
     overflow: hidden;
@@ -228,7 +228,7 @@ header .scroll{
     font-size: 3vw;
     position: absolute;
     width: 85%;
-    top: 5vw;
+    top: 5.5vw;
     padding: 3vw 40px;
     text-align: left;
     color: #fff;
@@ -809,9 +809,9 @@ span.thanks:hover ~ #mouth{
     #progress ul{
         padding: 0 20px;
         margin: 0 auto;
-        width: 75%;
+        width: 80%;
         margin-top: 15px;
-        columns: 4;
+        columns: 3;
         border: 2px #fff solid;
     }
 
@@ -858,6 +858,403 @@ span.thanks:hover ~ #mouth{
         transform: translate(-50%, -50%); 
         z-index: 0;
     }
+}
+
+@media only screen and (min-width: 3000px) {
+    header #logo{
+        position: relative;
+        top: 1400px;
+        left: 50%;
+        /* max-width: 50%;
+        top: 50%;
+        left: 50%;
+        margin-right: -50%;
+        transform: translate(-50%, -50%);  */
+        width: 70em;
+    }
+    
+    header .hi{
+        position: relative;
+        top: 500px;
+        left: 28%;
+        font-size: 400px;
+        font-weight: 700;
+        word-spacing: 40px;
+        opacity: 0;
+        -webkit-animation: mymove .5s ease forwards; /* Safari 4.0 - 8.0 */
+        animation: mymove .5s ease forwards;
+        -webkit-animation-delay: 1s;
+        animation-delay: 1s;
+    }
+  
+    header .welcome{
+        position: relative;
+        top: 750px;
+        margin: 0 auto;
+        font-size: 80px;
+    }
+    
+    
+    header .scroll{
+        position: relative;
+        top: 750px;
+        font-size: 90px;
+    }
+
+
+    /* End of Title Page */
+    /* ----------------------------------------------------- */
+    
+    
+    
+    
+    /* About Page */
+    /* ----------------------------------------------------- */
+    #about-me{
+        background-color: #FAAB18;
+        width: 100%;
+        height: auto;  
+        position: relative;
+        transition: height .5s ease-in;
+    }
+    
+    #about-me h1{
+        width: 100%;
+        color: #fff;
+        font-size: 300px;
+        text-align: center;
+        position: absolute;
+        margin: 5px 0;
+    }
+    
+    
+    #about-me .aboutBackground .back{
+        font-size: 800px;
+        display: block;
+        /* color:rgba(241, 195, 44, 0.5); */
+        color:rgba(255,255,255, 0.1);
+        font-weight: 300;
+        line-height: 85%;
+    }
+    
+    #about-me .aboutBackground #engineer{
+        font-weight: 700;
+        line-height: 60%;
+        margin-top: 3%;
+    
+    }
+    
+    /* #about-me .aboutBackground #execute{
+        padding-bottom: 20px;
+    
+    } */
+    
+    
+    #about-me .info{
+        font-size: 80px;
+        position: absolute;
+        width: 85%;
+        top: 300px;
+        padding: 100px 40px;
+        text-align: left;
+        color: #fff;
+    }
+    
+    .about{
+        margin: 50px 0;
+    }
+    
+    /* #about-me .about{
+        text-align: center;
+    } */
+    
+    
+        /* Skills Section */
+        /* ----------------------------------------------------- */
+    
+    
+        #about-me #skills{
+            background: rgba(252, 194, 70, 0.95);
+            width: 100%;
+            height: 0;
+            position: absolute;
+            bottom: 0;
+            z-index: 0;
+            transition: 1s ease-out;
+        }
+    
+    
+        /* #about-me h1:hover{
+            transform: rotateZ(90deg);
+        } */
+        #btn{
+            display: none;
+        }
+    
+        #skills > .label > .fa-angle-up{
+            position: relative;
+            left: 230px;
+            bottom: 110px;
+            /* transform: scaleX(1.25); */
+            transition: transform .5s ease-out, bottom .5s ease-out;
+            z-index: -1;
+            animation: up 2s 1s ease-in-out infinite;
+        }
+    
+        #skills > .label{
+            cursor: pointer;
+            display: block;
+            position: relative; 
+            left: -80px;
+            font-size: 180px;
+            color: #fff;
+            width: 100%;
+            text-align: center;
+            bottom: 180px;
+            margin-bottom: -180px;
+            transition: height .5s ease-out, bottom .5s ease-out;
+            z-index: 1;
+        }
+    
+    
+        .skill-list li{
+            float: left;
+            width: 40%;
+            height: 0%;
+            list-style-type: none;
+            margin: 0 5%;
+            position: relative;
+            opacity: 0;
+            transition: .5s linear;
+        }
+    
+        .skill-title{
+            position: relative;
+            font-size: 70px;
+            bottom: 70px;
+            color: #3f3f3f;
+        }
+    
+        .skill-percent{
+            position: relative;
+            font-size: 70px;
+            bottom: 153px;
+            color: #3f3f3f;
+            float: right;  
+        }
+    
+       #btn:checked ~ #skills{
+            height: 77%;
+        }
+    
+        #btn:checked ~ #skills > .label{
+            bottom: 0;
+        }
+    
+        #btn:checked ~ #skills > .label > .fa-angle-up{
+            -moz-transform: rotateZ(-180deg);
+            -o-transform: rotateZ(-180deg);
+            -webkit-transform: rotateZ(-180deg);
+            transform: rotateZ(-180deg);
+            animation: none;
+            bottom: -3.5vw;
+        }
+    
+        #btn:checked ~ #skills > .skill-list > li{
+            opacity: 100;
+        }
+    
+        .skill .container{
+            height: 15px;
+            width: 100%;
+            background-color: #f3960a;
+            margin: 12% 0;
+        }
+    
+        .container .skl{
+            height: 19px;
+            background-color: #8d8d8d;
+            position: relative;
+            left: 0;
+            bottom: 1px;
+        }
+    
+        .skill .top{
+            margin-top: 25%;
+        }
+    
+        .skill .last{
+            margin-bottom: 40px;
+        }
+    
+        #skill-info{
+            text-align: center;
+            position: relative;
+            font-size: 70px;
+            bottom: 1;
+            color: #3f3f3f;
+            padding: 10px;
+        }
+        /* End of Skills Section */
+    /* ----------------------------------------------------- */
+    
+    
+    /* End of About page */
+    /* ----------------------------------------------------- */
+    
+    
+    /* Progress Page */
+    /* ----------------------------------------------------- */
+    #progress{
+        background-color: #222;
+        position: relative;
+        width: 100%;
+        box-sizing: border-box;
+    }
+    
+    #progress .title{
+        width: 100%;
+        position: absolute;
+        top: 0;
+        left: 0;
+    }
+    
+    #progress .title h1{
+        padding: 0;
+        margin: 0;
+        color: #fff;
+        font-size: 300px;
+        text-align: center;
+    }
+    #progress .prog{
+        color: #fff;
+        font-size: 90px;
+        text-align: left;
+        padding: 0 40px;
+    }
+    
+    #project-info{
+        margin-top: 80px;
+        font-size: 90px;
+        text-align: center;
+    }
+    
+    .project{
+        color:#fff;
+        padding: 0 40px;
+    }
+    
+    #progress ul{
+        margin: 0 auto;
+        width: 45%;
+        margin-top: 15px;
+        columns: 2;
+        border: 2px #fff solid;
+    }
+    
+    .project li{
+        list-style-type: none;
+        text-align: center;
+        font-size: 75px;
+        line-height: 150%;
+    }
+    
+    #project-footer{
+        padding-top: 10px;
+        color: #fff;
+        font-size: 75px;
+        text-align: center;
+    }
+
+    
+    #progress h2{
+        text-align: center;
+        color: #fff;
+        font-size: 80px;
+        text-decoration: underline;
+        /* border-bottom: #fff solid 2px; */
+    }
+    
+    #progress p{
+        color: #fff;
+        font-size: 1.3em;
+        line-height: 130%;
+    }
+    
+    /* #progress .projects{
+        position: relative;
+        top: -400px;
+        margin-bottom: -30vh;
+    } */
+    
+    /* #progress .project{
+        display: grid;
+        padding: 5px;
+        margin: 10px 0;
+        color: #000;
+        background-color: rgba(255,255,255,.85);
+        border: #000 solid 1px;
+        width: 30vw;
+        height: 5vw;
+        text-align: center;  
+        font-size: 1.5vw; 
+    } */
+    
+    
+    /* End of Progress Page */
+    /* ----------------------------------------------------- */
+    
+    
+    /* Contact Page */
+    /* ----------------------------------------------------- */
+    #contact{
+        background-color: #33C5F3;
+        position: relative;
+    }
+    
+    #contact p{
+        color: #fff;
+    }
+    
+    #contact .intro{
+        padding-left: 25px;
+        line-height: 90%;
+    }
+    
+    #contact #lets{
+        font-size: 325px;
+        padding-top: 20px;
+    }
+    
+    #contact #just{
+        font-size: 200px;
+    }
+    
+    #contact .email{
+        font-size: 425px;
+        text-align: right;
+        padding-right: 5%;
+        line-height: 90%;
+    }
+    /* End of Contact Page */
+    /* ----------------------------------------------------- */
+    
+    
+    
+    /* Footer */
+    /* ----------------------------------------------------- */
+    footer{ 
+        padding: 5px 0;
+        position: relative;   
+        background-color: #000;
+        color: #fff;
+        text-align: center;
+        font-size: 90px;
+    
+    }
+    
+ 
+
 }
 
 
