--- a/css/style.css
+++ b/css/style.css
@@ -99,7 +99,6 @@ a {
     transition: all 225ms ease;
 }
 
-
 /* End of General CSS */
 /* ----------------------------------------------------- */
 
@@ -209,6 +208,8 @@ header .scroll{
     color:rgba(255,255,255, 0.1);
     font-weight: 300;
     line-height: 85%;
+    /* -webkit-animation: slideInLeft 1s ease-out 1;
+    animation:  slideInLeft 1s ease-out 1; */
 }
 
 #about-me .aboutBackground #engineer{
@@ -232,9 +233,11 @@ header .scroll{
     padding: 3vw 40px;
     text-align: left;
     color: #fff;
+    /* animation: mymove 1.5s 1.7s 1 forwards; */
 }
 
 .about{
+    
     margin: 50px 0;
 }
 
@@ -630,6 +633,33 @@ span.thanks:hover ~ #mouth{
 /* End of Footer */
 /* ----------------------------------------------------- */
 
+/* @-webkit-keyframes slideInLeft {
+    from {
+      -webkit-transform: translate3d(-100%, 0, 0);
+      transform: translate3d(-100%, 0, 0);
+      visibility: visible;
+    }
+  
+    to {
+      -webkit-transform: translate3d(0, 0, 0);
+      transform: translate3d(0, 0, 0);
+    }
+  }
+  
+  @keyframes slideInLeft {
+    from {
+        -webkit-transform: translate3d(-100%, 0, 0);
+        transform: translate3d(-100%, 0, 0);
+        visibility: visible;
+    }
+  
+    to {
+      -webkit-transform: translate3d(0, 0, 0);
+      transform: translate3d(0, 0, 0);
+    }
+  } */
+
+
 @keyframes mymove {
     from {opacity: 0;}
     to {opacity: 100;}
@@ -643,6 +673,17 @@ span.thanks:hover ~ #mouth{
 
 /* Media Queries */
 /* ----------------------------------------------------- */
+@media only screen and (max-width: 960px) {
+    #progress ul{
+        padding: 0 20px;
+        margin: 0 auto;
+        width: 75%;
+        margin-top: 8px;
+        columns: 3;
+        border: 2px #fff solid;
+    }
+}
+
 
 @media only screen and (max-width: 767px) {
     header{
@@ -708,14 +749,14 @@ span.thanks:hover ~ #mouth{
         text-align: center;
     }
 
-    #progress ul{
+    /* #progress ul{
         padding: 0 20px;
         margin: 0 auto;
         width: 75%;
         margin-top: 15px;
         columns: 3;
         border: 2px #fff solid;
-    }
+    } */
 
     .project li{
         list-style-type: none;
@@ -935,6 +976,7 @@ span.thanks:hover ~ #mouth{
         color:rgba(255,255,255, 0.1);
         font-weight: 300;
         line-height: 85%;
+
     }
     
     #about-me .aboutBackground #engineer{
